--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     </main>
     <script src="./appConfig.js" type="module"></script>
     <script src="./main.js" type="module"></script>
+    <script src="./landingPageBtns.js" type="module"></script>
   </body>
 </html>
