--- a/index.html
+++ b/index.html
@@ -8,24 +8,61 @@
     <title>Post app</title>
   </head>
   <body>
+    <header>
+      <div id="firstContainer">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6983Bl6tjEq6YT8fkuaRXL9JoV2stfdJPg&s"
+          alt="post logo"
+        />
+        <h1>Post post</h1>
+        <button id="regLand">Register</button>
+        <button id="logLand">Login</button>
+        <button id="logOut">Log out</button>
+      </div>
+      <nav>
+        <div id="adminNav">
+          <button>New category</button>
+          <button>Show users</button>
+          <button>All posts</button>
+        </div>
+        <div id="simpleNav">
+          <button>Add post</button>
+          <button>My posts</button>
+          <button>Favorites</button>
+          <select id="">
+            <option value="0">All categories</option>
+          </select>
+        </div>
+      </nav>
+    </header>
     <main>
-      <button id="regLand">Register</button>
-      <section id="registration-form">
-        <label for="regEmail">Email</label>
-        <input type="email" name="" id="regEmail" />
-        <label for="regPass">Password</label>
-        <input type="password" name="" id="regPass" />
-      </section>
-      <button id="logLand">Login</button>
-      <section id="login-form">
-        <label for="logEmail">Email</label>
-        <input type="email" name="" id="logEmail" />
-        <label for="logPass">Password</label>
-        <input type="password" name="" id="logPass" />
-      </section>
+      <div id="regLogContainer">
+        <form id="registration-form">
+          <h2>REGISTER</h2>
+          <label for="regEmail">Email</label>
+          <input type="email" name="" id="regEmail" />
+          <label for="regPass">Password</label>
+          <input type="password" name="" id="regPass" />
+          <button id="regSubmit">Submit registration</button>
+        </form>
+
+        <form id="login-form">
+          <h2>LOGIN</h2>
+          <label for="logEmail">Email</label>
+          <input type="email" name="" id="logEmail" />
+          <label for="logPass">Password</label>
+          <input type="password" name="" id="logPass" />
+          <button id="logSubmit">Submit login</button>
+        </form>
+      </div>
+      <section id="mainContainer"></section>
     </main>
     <script src="./appConfig.js" type="module"></script>
     <script src="./main.js" type="module"></script>
-    <script src="./landingPageBtns.js" type="module"></script>
+    <script src="./landingPageRegBtn.js" type="module"></script>
+    <script src="./landingPageLogBtn.js" type="module"></script>
+    <script src="./submitLogFormBtn.js" type="module"></script>
+    <script src="./submitRegFormBtn.js" type="module"></script>
+    <script src="./authorization.js" type="module"></script>
   </body>
 </html>
