admin panel added

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div>
       <nav>
         <div id="adminNav">
-          <button>New category</button>
-          <button>Show users</button>
-          <button>All posts</button>
+          <button id="newCategoryTab">New category</button>
+          <button id="showUsersTab">Show users</button>
+          <button id="allPostsTab">All posts</button>
         </div>
         <div id="simpleNav">
           <button>Add post</button>
@@ -63,6 +63,11 @@
     <script src="./landingPageLogBtn.js" type="module"></script>
     <script src="./submitLogFormBtn.js" type="module"></script>
     <script src="./submitRegFormBtn.js" type="module"></script>
-    <script src="./authorization.js" type="module"></script>
+    <script src="./authorizationFunc.js" type="module"></script>
+    <script type="module" src="./logOutBtn.js"></script>
+    <script type="module" src="adminPage.js"></script>
+    <script type="module" src="./dom.js"></script>
+    <script type="module" src="./noUserView.js"></script>
+    <script type="module" src="./adminNewCategoryFunc.js"></script>
   </body>
 </html>
