simple user add post form added, all values get checked, categories fetched from DB

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <button id="allPostsTab">All posts</button>
         </div>
         <div id="simpleNav">
-          <button>Add post</button>
-          <button>My posts</button>
-          <button>Favorites</button>
+          <button id="addPost">Add post</button>
+          <button id="myPosts">My posts</button>
+          <button id="favorites">Favorites</button>
           <select id="">
             <option value="0">All categories</option>
           </select>
