can make posts, posts get displayed, post category filtering works. Need to add Comments, ability for users to delete or edit their own posts, favorites, admin post control

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <button id="addPost">Add post</button>
           <button id="myPosts">My posts</button>
           <button id="favorites">Favorites</button>
-          <select id="">
+          <select id="selectCategory">
             <option value="0">All categories</option>
           </select>
         </div>
