--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Post app</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div id="firstContainer">
         <img
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRi6983Bl6tjEq6YT8fkuaRXL9JoV2stfdJPg&s"
