--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
           <select id="selectCategory">
             <option value="0">All categories</option>
           </select>
+          <input type="text" id="postSearch" />
+          <button id="postSearchBtn">Search</button>
         </div>
       </nav>
     </header>
